pkg/pkg4/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-hero
  namespace: frontend  
  labels:
    app: fitness-hero
    env: production  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fitness-hero
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: fitness-hero
        env: production 
    spec:  
      containers:
        - name: fitness-hero
          image: alvin254/fitnesshero
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          readinessProbe:
            httpGet:
              path:  /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
